# game-theory-rep

./: CMakeLists.txt  README.md  players.cpp
include/mechanics/: mechanics.h
include/players/: players.h
include/statistics/: stats.h
src/: game.cpp  mechanics.cpp  players.cpp  stats.cpp
